# MeshEdition

./: CMakeLists.txt  README.md
Core/: Edge.cpp  Edge.h  Face.h  OBJFileUtil.cpp  OBJFileUtil.h  Solid.cpp  Solid.h  Vertex.cpp  Vertex.h  mutablePriorityQueue.h
src/: MeshOperator.cpp  MeshOperator.h  interactionManager.cpp  interactionManager.h  main.cpp
